--- a/src/app/MARAA/measurement-data-moshe/measurement-data-moshe.component.scss
+++ b/src/app/MARAA/measurement-data-moshe/measurement-data-moshe.component.scss
@@ -3,3 +3,12 @@
   padding-left: 16px;
   padding-right: 16px;
 }
+.low-percentage {
+  color: red;
+  font-weight: bold;
+}
+
+.high-percentage {
+  color: green;
+  font-weight: bold;
+}
