--- a/src/app/MARAA/measurement-data-moshe/measurement-data-moshe.component.html
+++ b/src/app/MARAA/measurement-data-moshe/measurement-data-moshe.component.html
@@ -39,34 +39,6 @@
     <button mat-raised-button color="primary" (click)="applyFilter()">סנן</button>
     <button mat-button (click)="resetFilter()">איפוס</button>
   </div>
-</mat-card>
-<mat-card class="quarterly-table-card" dir="rtl">
-  <mat-card-title>דוח רבעוני לפי מדד</mat-card-title>
-  <div class="mat-elevation-z4">
-    <table mat-table [dataSource]="quarterlyDataSource" class="mat-table" matSort>
-
-      <ng-container *ngFor="let col of quarterlyDisplayedColumns" [matColumnDef]="col">
-        <th mat-header-cell *matHeaderCellDef>{{ col }}</th>
-      
-        <!-- If it's the 'Measurement' column, just show the value as text -->
-        <td mat-cell *matCellDef="let element">
-          <ng-container *ngIf="col === 'Measurement'; else percentageCell">
-            {{ element[col] }}
-          </ng-container>
-          <ng-template #percentageCell>
-            <span [ngClass]="getCellClass(element[col])">
-              {{ element[col] !== null && element[col] !== undefined ? (element[col] | number:'1.0-2') + '%' : '' }}
-            </span>
-          </ng-template>
-        </td>
-      </ng-container>
-      
-
-      <tr mat-header-row *matHeaderRowDef="quarterlyDisplayedColumns"></tr>
-      <tr mat-row *matRowDef="let row; columns: quarterlyDisplayedColumns;"></tr>
-    </table>
-  </div>
-</mat-card>
 
 
 <mat-tab-group dir="rtl">
@@ -149,8 +121,36 @@
       showFirstLastButtons>
     </mat-paginator>
   </mat-tab>
-</mat-tab-group>
-</div>
+  <mat-tab label="סיכום שנתי/רבעוני">
+    <mat-card class="quarterly-table-card" dir="rtl">
+      <mat-card-title>דוח רבעוני לפי מדד</mat-card-title>
+      <div class="mat-elevation-z4">
+        <table mat-table [dataSource]="quarterlyDataSource" class="mat-table" matSort>
+
+          <ng-container *ngFor="let col of quarterlyDisplayedColumns" [matColumnDef]="col">
+            <th mat-header-cell *matHeaderCellDef>{{ col }}</th>
+            <td mat-cell *matCellDef="let element">
+              <ng-container *ngIf="col === 'Measurement'; else percentageCell">
+                {{ element[col] }}
+              </ng-container>
+              <ng-template #percentageCell>
+                <span [ngClass]="getCellClass(element[col])">
+                  {{ element[col] !== null && element[col] !== undefined ? (element[col] | number:'1.0-2') + '%' : '' }}
+                </span>
+              </ng-template>
+            </td>
+          </ng-container>
+
+          <tr mat-header-row *matHeaderRowDef="quarterlyDisplayedColumns"></tr>
+          <tr mat-row *matRowDef="let row; columns: quarterlyDisplayedColumns;"></tr>
+        </table>
+      </div>
+    </mat-card>
+  </mat-tab>
+  </mat-tab-group>
+
+
+
 
 <!-- Optional Loading Spinner -->
 <mat-spinner *ngIf="isLoading" diameter="40"></mat-spinner>
