--- a/src/app/MARAA/measurement-data-moshe/measurement-data-moshe.component.html
+++ b/src/app/MARAA/measurement-data-moshe/measurement-data-moshe.component.html
@@ -144,9 +144,48 @@
           <tr mat-header-row *matHeaderRowDef="quarterlyDisplayedColumns"></tr>
           <tr mat-row *matRowDef="let row; columns: quarterlyDisplayedColumns;"></tr>
         </table>
+            <!-- ✅ Add paginator -->
+      <mat-paginator
+      #quarterlyPaginator
+      [pageSizeOptions]="[5, 10, 20]"
+      showFirstLastButtons>
+    </mat-paginator>
       </div>
     </mat-card>
   </mat-tab>
+
+  <mat-tab label="סיכום חודשי לפי מדד">
+    <mat-card class="monthly-table-card" dir="rtl">
+      <mat-card-title>סיכום חודשי לפי מדד</mat-card-title>
+      <div class="mat-elevation-z4">
+        <table mat-table [dataSource]="monthlyDataSource" class="mat-table" matSort>
+  
+          <ng-container *ngFor="let col of monthlyDisplayedColumns" [matColumnDef]="col">
+            <th mat-header-cell *matHeaderCellDef>{{ col }}</th>
+            <td mat-cell *matCellDef="let element">
+              <ng-container *ngIf="col === 'Measurement'; else gradeCell">
+                {{ element[col] }}
+              </ng-container>
+              <ng-template #gradeCell>
+                <span [ngClass]="getCellClass(element[col])">
+                  {{ element[col] !== null && element[col] !== undefined ? (element[col] | number:'1.0-2') + '%' : '' }}
+                </span>
+              </ng-template>
+            </td>
+          </ng-container>
+  
+          <tr mat-header-row *matHeaderRowDef="monthlyDisplayedColumns"></tr>
+          <tr mat-row *matRowDef="let row; columns: monthlyDisplayedColumns;"></tr>
+        </table>
+        <mat-paginator
+  #monthlyPaginator
+  [pageSizeOptions]="[5, 10, 20]"
+  showFirstLastButtons>
+</mat-paginator>
+      </div>
+    </mat-card>
+  </mat-tab>
+  
   </mat-tab-group>
 
 
