--- a/src/app/MARAA/measurement-data-moshe/measurement-data-moshe.component.html
+++ b/src/app/MARAA/measurement-data-moshe/measurement-data-moshe.component.html
@@ -221,7 +221,7 @@
     </mat-card>
   </mat-tab>
   <!-- ❌ סיכום תקלות במדדים -->
-<mat-tab label="תקלות במדדים">
+<mat-tab label="לא עמדו במדד">
   <mat-card class="failed-cases-card" dir="rtl">
     <mat-card-title>רשימת מדדים עם מונה שונה מ-1</mat-card-title>
 
