--- a/src/app/MARAA/measurement-data-moshe/measurement-data-moshe.component.html
+++ b/src/app/MARAA/measurement-data-moshe/measurement-data-moshe.component.html
@@ -165,8 +165,9 @@
         <table mat-table [dataSource]="quarterlyDataSource" class="mat-table" matSort>
 
           <ng-container *ngFor="let col of quarterlyDisplayedColumns" [matColumnDef]="col">
-            <th mat-header-cell *matHeaderCellDef>{{ col }}</th>
-            <td mat-cell *matCellDef="let element">
+            <th mat-header-cell *matHeaderCellDef>
+              {{ col === 'Measurement' ? 'קוד מדד' : col }}
+            </th>            <td mat-cell *matCellDef="let element">
               <ng-container *ngIf="col === 'Measurement'; else percentageCell">
                 {{ element[col] }}
               </ng-container>
@@ -198,8 +199,9 @@
         <table mat-table [dataSource]="monthlyDataSource" class="mat-table" matSort>
   
           <ng-container *ngFor="let col of monthlyDisplayedColumns" [matColumnDef]="col">
-            <th mat-header-cell *matHeaderCellDef>{{ col }}</th>
-            <td mat-cell *matCellDef="let element">
+            <th mat-header-cell *matHeaderCellDef>
+              {{ col === 'Measurement' ? 'קוד מדד' : col }}
+            </th>            <td mat-cell *matCellDef="let element">
               <ng-container *ngIf="col === 'Measurement'; else gradeCell">
                 {{ element[col] }}
               </ng-container>
