--- a/src/app/MARAA/measurement-data-moshe/measurement-data-moshe.component.html
+++ b/src/app/MARAA/measurement-data-moshe/measurement-data-moshe.component.html
@@ -163,12 +163,12 @@
       <mat-card-title>דוח רבעוני לפי מדד</mat-card-title>
       <div class="mat-elevation-z4">
         <table mat-table [dataSource]="quarterlyDataSource" class="mat-table" matSort>
-
           <ng-container *ngFor="let col of quarterlyDisplayedColumns" [matColumnDef]="col">
             <th mat-header-cell *matHeaderCellDef>
-              {{ col === 'Measurement' ? 'קוד מדד' : col }}
-            </th>            <td mat-cell *matCellDef="let element">
-              <ng-container *ngIf="col === 'Measurement'; else percentageCell">
+              {{ col === 'קוד מדד' ? 'קוד מדד' : col === 'שם מדד' ? 'שם מדד' : col }}
+            </th>
+            <td mat-cell *matCellDef="let element">
+              <ng-container *ngIf="col === 'קוד מדד' || col === 'שם מדד'; else percentageCell">
                 {{ element[col] }}
               </ng-container>
               <ng-template #percentageCell>
@@ -178,31 +178,31 @@
               </ng-template>
             </td>
           </ng-container>
-
+  
           <tr mat-header-row *matHeaderRowDef="quarterlyDisplayedColumns"></tr>
           <tr mat-row *matRowDef="let row; columns: quarterlyDisplayedColumns;"></tr>
         </table>
-            <!-- ✅ Add paginator -->
-      <mat-paginator
-      #quarterlyPaginator
-      [pageSizeOptions]="[5, 10, 20]"
-      showFirstLastButtons>
-    </mat-paginator>
+  
+        <mat-paginator
+          #quarterlyPaginator
+          [pageSizeOptions]="[5, 10, 20]"
+          showFirstLastButtons>
+        </mat-paginator>
       </div>
     </mat-card>
   </mat-tab>
-
+  
   <mat-tab label="סיכום חודשי לפי מדד">
     <mat-card class="monthly-table-card" dir="rtl">
       <mat-card-title>סיכום חודשי לפי מדד</mat-card-title>
       <div class="mat-elevation-z4">
         <table mat-table [dataSource]="monthlyDataSource" class="mat-table" matSort>
-  
           <ng-container *ngFor="let col of monthlyDisplayedColumns" [matColumnDef]="col">
             <th mat-header-cell *matHeaderCellDef>
-              {{ col === 'Measurement' ? 'קוד מדד' : col }}
-            </th>            <td mat-cell *matCellDef="let element">
-              <ng-container *ngIf="col === 'Measurement'; else gradeCell">
+              {{ col === 'קוד מדד' ? 'קוד מדד' : col === 'שם מדד' ? 'שם מדד' : col }}
+            </th>
+            <td mat-cell *matCellDef="let element">
+              <ng-container *ngIf="col === 'קוד מדד' || col === 'שם מדד'; else gradeCell">
                 {{ element[col] }}
               </ng-container>
               <ng-template #gradeCell>
@@ -216,14 +216,16 @@
           <tr mat-header-row *matHeaderRowDef="monthlyDisplayedColumns"></tr>
           <tr mat-row *matRowDef="let row; columns: monthlyDisplayedColumns;"></tr>
         </table>
+  
         <mat-paginator
-  #monthlyPaginator
-  [pageSizeOptions]="[5, 10, 20]"
-  showFirstLastButtons>
-</mat-paginator>
+          #monthlyPaginator
+          [pageSizeOptions]="[5, 10, 20]"
+          showFirstLastButtons>
+        </mat-paginator>
       </div>
     </mat-card>
   </mat-tab>
+  
   <!-- ❌ סיכום תקלות במדדים -->
 <mat-tab label="לא עמדו במדד">
   <mat-card class="failed-cases-card" dir="rtl">
