--- a/src/app/ServiceCRM/questionnaire-remarks/questionnaire-remarks.component.html
+++ b/src/app/ServiceCRM/questionnaire-remarks/questionnaire-remarks.component.html
@@ -75,10 +75,10 @@ style="cursor: pointer; float: left; margin-bottom: 10px;" />
     <td mat-cell *matCellDef="let row">{{ row.CaseNumber }}</td>
   </ng-container>
   
-  <!-- CellNumber -->
-  <ng-container matColumnDef="CellNumber">
+  <!-- CellNumber2 -->
+  <ng-container matColumnDef="CellNumber2">
     <th mat-header-cell *matHeaderCellDef mat-sort-header>מספר טלפון</th>
-    <td mat-cell *matCellDef="let row">{{ row.CellNumber }}</td>
+    <td mat-cell *matCellDef="let row">{{ row.CellNumber2 }}</td>
   </ng-container>
   
   <!-- RemarkDate -->
