--- a/src/app/MARAA/measurement-data-moshe/measurement-data-moshe.component.html
+++ b/src/app/MARAA/measurement-data-moshe/measurement-data-moshe.component.html
@@ -1,9 +1,6 @@
 
 
-<app-spinner-screen *ngIf="isLoading"
-[userName]="loginUserName"
-[profilePictureUrl]="profilePictureUrl">
-</app-spinner-screen>
+<app-spinner [isLoading]="isLoading"></app-spinner>
 
 
 <div class="measurement-wrapper" *ngIf="!isLoading">
@@ -177,6 +174,10 @@
       <ng-container matColumnDef="MeasurementCode">
         <th mat-header-cell *matHeaderCellDef mat-sort-header>קוד מדד</th>
         <td mat-cell *matCellDef="let row">{{ row.MeasurementCode }}</td>
+      </ng-container>
+      <ng-container matColumnDef="MeasurementShortDesc">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>שם מדד</th>
+        <td mat-cell *matCellDef="let row">{{ row.MeasurementShortDesc }}</td>
       </ng-container>
 
       <ng-container matColumnDef="Department">
